# Hybride_pageindex_RAG

./: .env.example  .gitignore  README.md  pyproject.toml  sdd.md  技術規格.md
.claude/: settings.local.json
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/core/: config.py  database.py  security.py  tracing.py
backend/app/models/: __init__.py  documents.py
backend/app/repositories/: __init__.py  documents.py
backend/app/schemas/: auth.py  documents.py  ingestion.py  query.py
backend/app/services/: agent_query.py  cohere_rerank.py  documents.py  embeddings.py  ingestion.py  markdown_parser.py  mineru.py  mineru_api.py  page_evidence.py  ranking.py  retrieval.py  summary.py  synthesis.py  vector_store.py  worker.py
backend/eval/: README.md  compare.py  generate_golden.py  golden_set.jsonl  llm_client.py  metrics.py  run_eval.py
backend/tests/: conftest.py  test_agent_query.py  test_auth.py  test_chat.py  test_documents.py  test_eval_api.py  test_eval_metrics.py  test_health.py  test_markdown_parser.py  test_mineru.py  test_mineru_api.py  test_page_evidence.py  test_query.py  test_retrieval.py  test_summary.py  test_synthesis.py  test_tracing.py  test_versioning.py  test_worker.py
docs/: api-contract.md  architecture.md  fb-post.md  implementation-plan.md  remaining-work.md  security-notes.md  system-survey.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
infra/: docker-compose.yml  postgres-init.sql
scripts/: bootstrap_db.py  bootstrap_qdrant.py  check_backend.ps1  e2e_http_live.py  e2e_live.py  e2e_mineru_live.py
(+15 files in other folders)
