[project]
name = "hybride-pageindex-rag"
version = "0.1.0"
description = "On-premise hybrid PageIndex RAG system for enterprise knowledge management."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agno>=1.7.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.12",
    "qdrant-client>=1.11.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "mineru[core]>=3.4.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "litellm>=1.89.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
]

[project.optional-dependencies]
observability = [
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-agno>=0.1.0",
    "opentelemetry-exporter-otlp>=1.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

# GPU PyTorch (CUDA 13.0 / cu130) for the NVIDIA RTX 5090 (Blackwell, sm_120).
# Without this, Windows resolves torch to the CPU-only build and MinerU runs on CPU.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
